--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TipoDespesa" asp-action="Index">Cadastro do Tipo Despesa</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UnidadeMedida" asp-action="Index">Cadastro da Unidade de Medida</a>
+                        </li>
                     </ul>
                 </div>
             </div>
