ajuste bootstrp em fomrularios de tipo intituicao

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -273,8 +273,8 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">@ViewData["Title"]</h1>
+                    <div class="bg-primary d-sm-flex flex-row-reverse align-items-center justify-content-lg-around mb-4">
+                        <h1 class="h3 mb-0 text-white">@ViewData["Title"]</h1>
                     </div>
 
                     @RenderBody()
