--- a/Views/TipoDespesa/Index.cshtml
+++ b/Views/TipoDespesa/Index.cshtml
@@ -2,20 +2,24 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Tipo Despesas";
 }
 
 @model IEnumerable<TipoDespesaModel>
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-5">
-        <h1>Tipo Despesa</h1>
+        <!--<h1>Tipo Despesas</h1>-->
         <a class="btn btn-success mx-2" asp-controller="TipoDespesa" asp-action="Cadastrar">Cadastrar Tipo de Despesa</a>
     </div>
 
-    <table class="table table-striped table-dark">
+    <!--<table class="table table-striped table-dark">-->
+    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
             <tr>
-                <th scope="col">Descricao</th>
+                <!--<th scope="col">Descricao</th>-->
+                <td>Descrição</td>
+                <td></td>
             </tr>
         </thead>
         <tbody>
@@ -24,7 +28,8 @@
                 @foreach (var tipoDespesa in Model)
                 {
                     <tr>
-                        <th scope="row">@tipoDespesa.Descricao</th>
+                        <!--<th scope="row">@tipoDespesa.Descricao</th>-->
+                        <td>@tipoDespesa.Descricao</td>
                         <td>
                             <a asp-controller="TipoDespesa" asp-action="Editar" asp-route-id="@tipoDespesa.Id" class="btn btn-warning mx-2">Editar</a>
                             <a asp-controller="TipoDespesa" asp-action="Excluir" asp-route-id="@tipoDespesa.Id" class="btn btn-danger mx-2">Excluir</a>
