--- a/Views/UnidadeMedida/Cadastrar.cshtml
+++ b/Views/UnidadeMedida/Cadastrar.cshtml
@@ -1,34 +1,28 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
 
 @model UnidadeMedidaModel
 @{
-    ViewData["title"] = "Cadastrar Unidade Medida";
+    ViewData["title"] = "Cadastrar Unidade de Medida";
 }
 
-<div class="container bg-dark p-5 rounded-5">
-
-    <div class="mb-5 text-center">
-        <h1 class="text-light">Cadastro da Unidade de Medida</h1>
-    </div>
+<div class="container bg-light p-5 rounded-5">
 
     <form method="post" asp-controller="UnidadeMedida" asp-action="Cadastrar">
         <div class="form-group">
-            <label for="Descricao" class="text-light">Descrição</label>
-            <input type="text" class="form-control" asp-for="Descricao" id="Descricao" placeholder="Qual é o tipo da Unidade de Medida?">
+            <label for="Descricao" class="text-dark">Descrição</label>
+            <input type="text" class="form-control" asp-for="Descricao" id="Descricao" placeholder="Qual é a Unidade de Medida?">
             <span class="text-danger" asp-validation-for="Descricao"></span>
         </div>
         <div class="form-group">
-            <label for="Abreviatura" class="text-light">Abreviatura</label>
+            <label for="Abreviatura" class="text-dark">Abreviatura</label>
             <input type="text" class="form-control" asp-for="Abreviatura" id="Abreviatura" placeholder="Qual é a Abreviatura?">
             <span class="text-danger" asp-validation-for="Abreviatura"></span>
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Enviar</button>
+            <button type="submit" class="btn btn-success w-50">Confirma nova Unidade de Medida</button>
             <a class="btn btn-primary w-50" asp-controller="UnidadeMedida" asp-action="Index">Voltar</a>
         </div>
     </form>
