--- a/Views/UnidadeMedida/Editar.cshtml
+++ b/Views/UnidadeMedida/Editar.cshtml
@@ -6,30 +6,26 @@
 
 @model UnidadeMedidaModel
 @{
-    ViewData["title"] = "Editar Unidade Medida";
+    ViewData["title"] = "Editar Unidade de Medida";
 }
 
-<div class="container bg-dark p-5 rounded-5">
-
-    <div class="mb-5 text-center">
-        <h1 class="text-light">Editar Unidade de Medida</h1>
-    </div>
+<div class="container bg-light p-5 rounded-5">
 
     <form method="post" asp-controller="UnidadeMedida" asp-action="Editar">
         <input type="hidden" asp-formaction="Id" />
         <div class="form-group">
-            <label for="Descricao" class="text-light">Descrição</label>
-            <input type="text" class="form-control" asp-for="Descricao" id="Descricao" placeholder="Qual é o tipo da Unidade de Medida?">
+            <label for="Descricao" class="text-dark">Descrição</label>
+            <input type="text" class="form-control" asp-for="Descricao" id="Descricao" placeholder="Qual é a Unidade de Medida?">
             <span class="text-danger" asp-validation-for="Descricao"></span>
         </div>
         <div class="form-group">
-            <label for="Abreviatura" class="text-light">Abreviatura</label>
+            <label for="Abreviatura" class="text-dark">Abreviatura</label>
             <input type="text" class="form-control" asp-for="Abreviatura" id="Abreviatura" placeholder="Qual é a Abreviatura?">
             <span class="text-danger" asp-validation-for="Abreviatura"></span>
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Enviar</button>
+            <button type="submit" class="btn btn-success w-50">Confirma as alterações</button>
             <a class="btn btn-primary w-50" asp-controller="UnidadeMedida" asp-action="Index">Voltar</a>
         </div>
     </form>
