--- a/Views/UnidadeMedida/Index.cshtml
+++ b/Views/UnidadeMedida/Index.cshtml
@@ -2,21 +2,25 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Unidade de Medida";
 }
 
 @model IEnumerable<UnidadeMedidaModel>
 
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-5">
-        <h1>Unidade de Medida</h1>
+        <!--<h1>Unidade de Medida</h1>-->
         <a class="btn btn-success mx-2" asp-controller="UnidadeMedida" asp-action="Cadastrar">Cadastrar Unidade de Medida</a>
     </div>
 
-    <table class="table table-striped table-dark">
+    <!--<table class="table table-striped table-dark">-->
+    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
             <tr>
-                <th scope="col">Descricao</th>
-                <th scope="col">Abreviatura</th>
+                <!--<th scope="col">Descricao</th>-->
+                <td>Descrição</td>
+                <td>Abreviatura</td>
+                <td></td>
             </tr>
         </thead>
         <tbody>
@@ -25,8 +29,10 @@
                 @foreach (var unidadeMedida in Model)
                 {
                     <tr>
-                        <th scope="row">@unidadeMedida.Descricao</th>
-                        <th scope="row">@unidadeMedida.Abreviatura</th>
+                        <!--<th scope="row">@unidadeMedida.Descricao</th>-->
+                        <td>@unidadeMedida.Descricao</td>
+                        <!--<th scope="row">@unidadeMedida.Abreviatura</th>-->
+                        <td>@unidadeMedida.Abreviatura</td>
                         <td>
                             <a asp-controller="UnidadeMedida" asp-action="Editar" asp-route-id="@unidadeMedida.Id" class="btn btn-warning mx-2">Editar</a>
                             <a asp-controller="UnidadeMedida" asp-action="Excluir" asp-route-id="@unidadeMedida.Id" class="btn btn-danger mx-2">Excluir</a>
