Alterações Feitas na Documentação. UnidadeConsumidora criada, mas precisa testar pra ver se funciona

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
                         <a class="collapse-item" asp-area="" asp-controller="Instituicao" asp-action="Index">Tipo Instituição</a>
                         <a class="collapse-item" asp-area="" asp-controller="TipoDespesa" asp-action="Index">Tipo Despesa</a>
                         <a class="collapse-item" asp-area="" asp-controller="UnidadeMedida" asp-action="Index">Unidade de Medida</a>
+                        <a class="collapse-item" asp-area="" asp-controller="UnidadeConsumidora" asp-action="Index">Unidade Consumidora</a>
                     </div>
                 </div>
             </li>
@@ -96,6 +97,7 @@
                         <a class="collapse-item" asp-area="" asp-controller="Instituicao" asp-action="Index">Tipo Instituição</a>
                         <a class="collapse-item" asp-area="" asp-controller="TipoDespesa" asp-action="Index">Tipo Despesa</a>
                         <a class="collapse-item" asp-area="" asp-controller="UnidadeMedida" asp-action="Index">Unidade de Medida</a>
+                        <a class="collapse-item" asp-area="" asp-controller="UnidadeConsumidora" asp-action="Index">Unidade Consumidora</a>
                     </div>
                 </div>
             </li>
