--- a/Views/TipoDespesa/Cadastrar.cshtml
+++ b/Views/TipoDespesa/Cadastrar.cshtml
@@ -1,29 +1,23 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
 
 @model TipoDespesaModel
 @{
     ViewData["title"] = "Cadastrar Tipo Despesa";
 }
 
-<div class="container bg-dark p-5 rounded-5">
-
-    <div class="mb-5 text-center">
-        <h1 class="text-light">Cadastro do Tipo Despesa</h1>
-    </div>
+<div class="container bg-light p-5 rounded-5">
 
     <form method="post" asp-controller="TipoDespesa" asp-action="Cadastrar">
         <div class="form-group">
-            <label for="Descricao" class="text-light">Descrição</label>
+            <label for="Descricao" class="text-dark">Descrição</label>
             <input type="text" class="form-control" asp-for="Descricao" id="Descricao" placeholder="Qual é o tipo da Despesa?">
             <span class="text-danger" asp-validation-for="Descricao"></span>
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Enviar</button>
+            <button type="submit" class="btn btn-success w-50">Confirma novo Tipo de Despesa</button>
             <a class="btn btn-primary w-50" asp-controller="TipoDespesa" asp-action="Index">Voltar</a>
         </div>
     </form>
